--- a/index.html
+++ b/index.html
@@ -7,19 +7,74 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 0;
-            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+            background-color: #f0f4f8;
             text-align: center;
+            position: relative;
+            overflow-x: hidden;
         }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: 
+                linear-gradient(45deg, 
+                    transparent 45%, 
+                    rgba(66, 133, 244, 0.05) 45%,
+                    rgba(66, 133, 244, 0.05) 55%, 
+                    transparent 55%),
+                linear-gradient(-45deg, 
+                    transparent 45%, 
+                    rgba(66, 133, 244, 0.05) 45%,
+                    rgba(66, 133, 244, 0.05) 55%, 
+                    transparent 55%);
+            background-size: 60px 60px;
+            animation: moveBackground 15s linear infinite;
+            z-index: -1;
+        }
+
+        @keyframes moveBackground {
+            0% {
+                background-position: 0 0;
+            }
+            100% {
+                background-position: 60px 60px;
+            }
+        }
+
         .container {
+            backdrop-filter: blur(5px);
+            background: rgba(255, 255, 255, 0.95);
+            border: 1px solid rgba(255, 255, 255, 0.2);
             max-width: 500px;
             margin: auto;
             padding: 20px;
-            background: white;
-            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-            border-radius: 8px;
+            box-shadow: 0 8px 32px rgba(0, 123, 255, 0.1);
+            border-radius: 12px;
         }
+
+        /* Add some medical-themed accents */
+        .container::before {
+            content: '⚕';
+            position: absolute;
+            top: -20px;
+            left: -20px;
+            font-size: 40px;
+            color: rgba(66, 133, 244, 0.2);
+            animation: pulse 3s infinite;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); opacity: 0.2; }
+            50% { transform: scale(1.1); opacity: 0.3; }
+            100% { transform: scale(1); opacity: 0.2; }
+        }
+
         input, button {
             width: 100%;
             padding: 10px;
